// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions createJob() should call the job API with the view JSON in it's params because the view is dirty 1`] = `
{
  "delete": [],
  "get": [],
  "head": [],
  "link": [],
  "list": [],
  "options": [],
  "patch": [],
  "post": [
    {
      "data": "{"type":"jobTypeValue","scheduled_datetime":"2018-10-01T00:00:15.000Z","params":{"view":{"foo":"bar","type":"ticket-list","filters":{}},"exampleVar":"exampleValue"}}",
      "env": {
        "Blob": [Function],
        "FormData": [Function],
      },
      "headers": {
        "Accept": "application/json, text/plain, */*",
        "Content-Type": "application/json",
        "X-CSRF-Token": "abcd",
        "X-Gorgias-User-Client": "web",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "post",
      "timeout": 0,
      "transformRequest": [
        [Function],
      ],
      "transformResponse": [
        [Function],
      ],
      "transitional": {
        "clarifyTimeoutError": false,
        "forcedJSONParsing": true,
        "silentJSONParsing": true,
      },
      "url": "/api/jobs/",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "put": [],
  "unlink": [],
}
`;

exports[`actions createJob() should call the job API with the view id in it's params because the view is not dirty 1`] = `
{
  "delete": [],
  "get": [],
  "head": [],
  "link": [],
  "list": [],
  "options": [],
  "patch": [],
  "post": [
    {
      "data": "{"type":"jobTypeValue","scheduled_datetime":"2018-10-01T00:00:15.000Z","params":{"view_id":1,"exampleVar":"exampleValue"}}",
      "env": {
        "Blob": [Function],
        "FormData": [Function],
      },
      "headers": {
        "Accept": "application/json, text/plain, */*",
        "Content-Type": "application/json",
        "X-CSRF-Token": "abcd",
        "X-Gorgias-User-Client": "web",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "post",
      "timeout": 0,
      "transformRequest": [
        [Function],
      ],
      "transformResponse": [
        [Function],
      ],
      "transitional": {
        "clarifyTimeoutError": false,
        "forcedJSONParsing": true,
        "silentJSONParsing": true,
      },
      "url": "/api/jobs/",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "put": [],
  "unlink": [],
}
`;

exports[`actions deleteView() should prevent deletion of last view of same type 1`] = `
{
  "delete": [],
  "get": [],
  "head": [],
  "link": [],
  "list": [],
  "options": [],
  "patch": [],
  "post": [],
  "put": [],
  "unlink": [],
}
`;

exports[`actions deleteView() should prevent deletion of last view of same type 2`] = `[]`;

exports[`actions deleteView() should update the active view with the same type when deletion succeeds 1`] = `
{
  "delete": [
    {
      "data": undefined,
      "env": {
        "Blob": [Function],
        "FormData": [Function],
      },
      "headers": {
        "Accept": "application/json, text/plain, */*",
        "X-CSRF-Token": "abcd",
        "X-Gorgias-User-Client": "web",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "delete",
      "timeout": 0,
      "transformRequest": [
        [Function],
      ],
      "transformResponse": [
        [Function],
      ],
      "transitional": {
        "clarifyTimeoutError": false,
        "forcedJSONParsing": true,
        "silentJSONParsing": true,
      },
      "url": "/api/views/1/",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "get": [],
  "head": [],
  "link": [],
  "list": [],
  "options": [],
  "patch": [],
  "post": [],
  "put": [],
  "unlink": [],
}
`;

exports[`actions deleteView() should update the active view with the same type when deletion succeeds 2`] = `
[
  {
    "type": "ADD_RECENT_VIEW",
    "viewId": 2,
  },
  {
    "type": "SET_VIEW_ACTIVE",
    "view": Immutable.Map {
      "id": 2,
      "type": "ticket-list",
    },
  },
]
`;

exports[`actions deleteViewSuccess() should update the active view with the same type if deleted view was active 1`] = `
[
  {
    "type": "DELETE_VIEW_SUCCESS",
    "viewId": 1,
  },
  {
    "type": "ADD_RECENT_VIEW",
    "viewId": 1,
  },
  {
    "type": "SET_VIEW_ACTIVE",
    "view": Immutable.Map {
      "id": 1,
      "type": "ticket-list",
    },
  },
]
`;

exports[`actions fetchViewItems should fetch current page with cursor 1`] = `
[
  {
    "discreet": false,
    "type": "FETCH_LIST_VIEW_START",
    "viewId": 1,
  },
  {
    "data": {
      "data": [
        {
          "id": 1,
        },
        {
          "id": 2,
        },
      ],
      "meta": {
        "current_cursor": 123,
        "next_items": "/api/views/1/items?direction=next",
        "prev_items": "/api/views/1/items?direction=prev",
      },
    },
    "type": "FETCH_LIST_VIEW_SUCCESS",
    "viewType": "ticket-list",
    "withHighlight": false,
  },
]
`;

exports[`actions fetchViewItems should fetch current page with cursor 2`] = `
{
  "delete": [],
  "get": [
    {
      "data": undefined,
      "env": {
        "Blob": [Function],
        "FormData": [Function],
      },
      "headers": {
        "Accept": "application/json, text/plain, */*",
        "X-CSRF-Token": "abcd",
        "X-Gorgias-User-Client": "web",
        "x-gorgias-search-engine": "ES",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "get",
      "timeout": 0,
      "transformRequest": [
        [Function],
      ],
      "transformResponse": [
        [Function],
      ],
      "transitional": {
        "clarifyTimeoutError": false,
        "forcedJSONParsing": true,
        "silentJSONParsing": true,
      },
      "url": "/api/views/1/items/?cursor=1234",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "head": [],
  "link": [],
  "list": [],
  "options": [],
  "patch": [],
  "post": [],
  "put": [],
  "unlink": [],
}
`;

exports[`actions fetchViewItems should fetch current page without cursor 1`] = `
[
  {
    "discreet": false,
    "type": "FETCH_LIST_VIEW_START",
    "viewId": 1,
  },
  {
    "data": {
      "data": [
        {
          "id": 1,
        },
        {
          "id": 2,
        },
      ],
      "meta": {
        "current_cursor": 123,
        "next_items": "/api/views/1/items?direction=next",
        "prev_items": "/api/views/1/items?direction=prev",
      },
    },
    "type": "FETCH_LIST_VIEW_SUCCESS",
    "viewType": "ticket-list",
    "withHighlight": false,
  },
]
`;

exports[`actions fetchViewItems should fetch current page without cursor 2`] = `
{
  "delete": [],
  "get": [
    {
      "data": undefined,
      "env": {
        "Blob": [Function],
        "FormData": [Function],
      },
      "headers": {
        "Accept": "application/json, text/plain, */*",
        "X-CSRF-Token": "abcd",
        "X-Gorgias-User-Client": "web",
        "x-gorgias-search-engine": "ES",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "get",
      "timeout": 0,
      "transformRequest": [
        [Function],
      ],
      "transformResponse": [
        [Function],
      ],
      "transitional": {
        "clarifyTimeoutError": false,
        "forcedJSONParsing": true,
        "silentJSONParsing": true,
      },
      "url": "/api/views/1/items/",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "head": [],
  "link": [],
  "list": [],
  "options": [],
  "patch": [],
  "post": [],
  "put": [],
  "unlink": [],
}
`;

exports[`actions fetchViewItems should fetch next page 1`] = `
[
  {
    "discreet": false,
    "type": "FETCH_LIST_VIEW_START",
    "viewId": 1,
  },
  {
    "data": {
      "data": [
        {
          "id": 1,
        },
        {
          "id": 2,
        },
      ],
      "meta": {
        "current_cursor": 123,
        "next_items": "/api/views/1/items?direction=next",
        "prev_items": "/api/views/1/items?direction=prev",
      },
    },
    "type": "FETCH_LIST_VIEW_SUCCESS",
    "viewType": "ticket-list",
    "withHighlight": false,
  },
]
`;

exports[`actions fetchViewItems should fetch next page 2`] = `
{
  "delete": [],
  "get": [
    {
      "data": undefined,
      "env": {
        "Blob": [Function],
        "FormData": [Function],
      },
      "headers": {
        "Accept": "application/json, text/plain, */*",
        "X-CSRF-Token": "abcd",
        "X-Gorgias-User-Client": "web",
        "x-gorgias-search-engine": "ES",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "get",
      "timeout": 0,
      "transformRequest": [
        [Function],
      ],
      "transformResponse": [
        [Function],
      ],
      "transitional": {
        "clarifyTimeoutError": false,
        "forcedJSONParsing": true,
        "silentJSONParsing": true,
      },
      "url": "/api/views/1/items?direction=next&cursor=123&ignored_item=7",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "head": [],
  "link": [],
  "list": [],
  "options": [],
  "patch": [],
  "post": [],
  "put": [],
  "unlink": [],
}
`;

exports[`actions fetchViewItems should fetch prev page 1`] = `
[
  {
    "discreet": false,
    "type": "FETCH_LIST_VIEW_START",
    "viewId": 1,
  },
  {
    "data": {
      "data": [
        {
          "id": 1,
        },
        {
          "id": 2,
        },
      ],
      "meta": {
        "current_cursor": 123,
        "next_items": "/api/views/1/items?direction=next",
        "prev_items": "/api/views/1/items?direction=prev",
      },
    },
    "type": "FETCH_LIST_VIEW_SUCCESS",
    "viewType": "ticket-list",
    "withHighlight": false,
  },
]
`;

exports[`actions fetchViewItems should fetch prev page 2`] = `
{
  "delete": [],
  "get": [
    {
      "data": undefined,
      "env": {
        "Blob": [Function],
        "FormData": [Function],
      },
      "headers": {
        "Accept": "application/json, text/plain, */*",
        "X-CSRF-Token": "abcd",
        "X-Gorgias-User-Client": "web",
        "x-gorgias-search-engine": "ES",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "get",
      "timeout": 0,
      "transformRequest": [
        [Function],
      ],
      "transformResponse": [
        [Function],
      ],
      "transitional": {
        "clarifyTimeoutError": false,
        "forcedJSONParsing": true,
        "silentJSONParsing": true,
      },
      "url": "/api/views/1/items?direction=prevcursor=123&ignored_item=7",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "head": [],
  "link": [],
  "list": [],
  "options": [],
  "patch": [],
  "post": [],
  "put": [],
  "unlink": [],
}
`;

exports[`actions fetchViewItems should not dispatch FETCH_LIST_VIEW_SUCCESS because the filters of the view have changed since we started the request 1`] = `
[
  {
    "discreet": false,
    "type": "FETCH_LIST_VIEW_START",
    "viewId": 1,
  },
]
`;

exports[`actions fetchViewItems should not dispatch FETCH_LIST_VIEW_SUCCESS because the filters of the view have changed since we started the request 2`] = `
{
  "delete": [],
  "get": [
    {
      "data": undefined,
      "env": {
        "Blob": [Function],
        "FormData": [Function],
      },
      "headers": {
        "Accept": "application/json, text/plain, */*",
        "X-CSRF-Token": "abcd",
        "X-Gorgias-User-Client": "web",
        "x-gorgias-search-engine": "ES",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "get",
      "timeout": 0,
      "transformRequest": [
        [Function],
      ],
      "transformResponse": [
        [Function],
      ],
      "transitional": {
        "clarifyTimeoutError": false,
        "forcedJSONParsing": true,
        "silentJSONParsing": true,
      },
      "url": "/api/views/1/items/",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "head": [],
  "link": [],
  "list": [],
  "options": [],
  "patch": [],
  "post": [],
  "put": [],
  "unlink": [],
}
`;

exports[`actions fetchViewItems should not dispatch FETCH_LIST_VIEW_SUCCESS because the view for which we fetched items is not the current view 1`] = `
[
  {
    "discreet": false,
    "type": "FETCH_LIST_VIEW_START",
    "viewId": 1,
  },
]
`;

exports[`actions fetchViewItems should not dispatch FETCH_LIST_VIEW_SUCCESS because the view for which we fetched items is not the current view 2`] = `
{
  "delete": [],
  "get": [
    {
      "data": undefined,
      "env": {
        "Blob": [Function],
        "FormData": [Function],
      },
      "headers": {
        "Accept": "application/json, text/plain, */*",
        "X-CSRF-Token": "abcd",
        "X-Gorgias-User-Client": "web",
        "x-gorgias-search-engine": "ES",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "get",
      "timeout": 0,
      "transformRequest": [
        [Function],
      ],
      "transformResponse": [
        [Function],
      ],
      "transitional": {
        "clarifyTimeoutError": false,
        "forcedJSONParsing": true,
        "silentJSONParsing": true,
      },
      "url": "/api/views/1/items/",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "head": [],
  "link": [],
  "list": [],
  "options": [],
  "patch": [],
  "post": [],
  "put": [],
  "unlink": [],
}
`;

exports[`actions fetchViewItems should not dispatch FETCH_LIST_VIEW_SUCCESS because this fetch was caused by the polling, and the user is not currently on the first page 1`] = `
[
  {
    "discreet": true,
    "type": "FETCH_LIST_VIEW_START",
    "viewId": 1,
  },
]
`;

exports[`actions fetchViewItems should not dispatch FETCH_LIST_VIEW_SUCCESS because this fetch was caused by the polling, and the user is not currently on the first page 2`] = `
{
  "delete": [],
  "get": [
    {
      "data": undefined,
      "env": {
        "Blob": [Function],
        "FormData": [Function],
      },
      "headers": {
        "Accept": "application/json, text/plain, */*",
        "X-CSRF-Token": "abcd",
        "X-Gorgias-User-Client": "web",
        "x-gorgias-search-engine": "ES",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "get",
      "timeout": 0,
      "transformRequest": [
        [Function],
      ],
      "transformResponse": [
        [Function],
      ],
      "transitional": {
        "clarifyTimeoutError": false,
        "forcedJSONParsing": true,
        "silentJSONParsing": true,
      },
      "url": "/api/views/1/items/",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "head": [],
  "link": [],
  "list": [],
  "options": [],
  "patch": [],
  "post": [],
  "put": [],
  "unlink": [],
}
`;

exports[`actions fetchViewItems should not dispatch results when cancelling the fetch 1`] = `
[
  {
    "discreet": null,
    "type": "FETCH_LIST_VIEW_START",
    "viewId": 1,
  },
  {
    "data": {
      "data": [
        {
          "assignee_team": null,
          "assignee_user": {
            "email": "alex@gorgias.io",
            "firstname": "Alex",
            "id": 2,
            "lastname": "Plugaru",
            "name": "Alex Plugaru",
          },
          "channel": "email",
          "closed_datetime": null,
          "created_datetime": "2017-07-31T23:07:35.150000+00:00",
          "custom_fields": {},
          "customer": {
            "channels": [
              {
                "address": "jeanbon@gorgias.io",
                "created_datetime": "2017-07-31T21:45:03.399819+00:00",
                "deleted_datetime": null,
                "id": 55,
                "preferred": true,
                "type": "email",
                "updated_datetime": "2017-07-31T21:45:03.399828+00:00",
              },
              {
                "address": "+1 415-548-9999",
                "created_datetime": "2017-07-31T21:45:03.416965+00:00",
                "deleted_datetime": null,
                "id": 56,
                "preferred": true,
                "type": "phone",
                "updated_datetime": "2017-07-31T21:45:03.416976+00:00",
              },
            ],
            "data": null,
            "email": "jeanbon@gorgias.io",
            "firstname": "Jean",
            "id": 34,
            "integrations": {
              "2": {
                "__integration_type__": "http",
                "args": {
                  "name": "Jean Bon",
                },
                "headers": {
                  "Accept": "*/*",
                  "Accept-Encoding": "gzip, deflate",
                  "Connection": "close",
                  "Content-Type": "application/json",
                  "Host": "httpbin.org",
                  "User-Agent": "python-requests/2.14.2",
                },
                "origin": "199.188.194.25",
                "url": "https://httpbin.org/get?name=Jean Bon",
              },
              "5": {
                "__integration_type__": "shopify",
                "customer": {
                  "addresses": [
                    {
                      "address1": "3 rue des volailles",
                      "address2": "",
                      "city": "Paris",
                      "company": "Fleury Michon",
                      "country": "France",
                      "country_code": "FR",
                      "country_name": "France",
                      "customer_id": 4279837195,
                      "default": false,
                      "first_name": "Jean",
                      "id": 4665556619,
                      "last_name": "Bon",
                      "name": "Jean Bon",
                      "phone": "",
                      "province": "Ile de France",
                      "province_code": null,
                      "zip": "75012",
                    },
                  ],
                  "created_at": "2017-03-17T21:26:16-04:00",
                  "default_address": {
                    "address1": "12 rue du poisson cru",
                    "address2": "unit 3",
                    "city": "Paris",
                    "company": "Fleury Michon",
                    "country": "France",
                    "country_code": "FR",
                    "country_name": "France",
                    "customer_id": 4279837195,
                    "default": true,
                    "first_name": "Jean",
                    "id": 4797217995,
                    "last_name": "Bon",
                    "name": "Jean Bon",
                    "phone": null,
                    "province": "Ile de France",
                    "province_code": null,
                    "zip": "75012",
                  },
                  "email": "jeanbon@gorgias.io",
                  "email_marketing_consent": {
                    "consent_updated_at": null,
                    "opt_in_level": "single_opt_in",
                    "state": "not_subscribed",
                  },
                  "first_name": "Jean",
                  "id": 4279837195,
                  "last_name": "Bon",
                  "last_order_id": 4236385803,
                  "last_order_name": "#1202",
                  "multipass_identifier": null,
                  "note": "Un grand jambon",
                  "orders_count": 80,
                  "phone": "+14155489999",
                  "sms_marketing_consent": null,
                  "state": "disabled",
                  "tags": "Active Subscriber",
                  "tax_exempt": false,
                  "total_spent": "131.50",
                  "updated_at": "2017-07-12T20:44:14-04:00",
                  "verified_email": true,
                },
                "orders": [
                  {
                    "billing_address": {
                      "address1": "12 rue du poisson cru",
                      "address2": "unit 3",
                      "city": "Paris",
                      "company": "Fleury Michon",
                      "country": "France",
                      "country_code": "FR",
                      "first_name": "Jean",
                      "last_name": "Bon",
                      "latitude": 48.8293647,
                      "longitude": 2.4265406,
                      "name": "Jean Bon",
                      "phone": null,
                      "province": "Ile de France",
                      "province_code": null,
                      "zip": "75012",
                    },
                    "browser_ip": null,
                    "buyer_accepts_marketing": false,
                    "cancel_reason": null,
                    "cancelled_at": null,
                    "cart_token": null,
                    "checkout_id": null,
                    "checkout_token": null,
                    "closed_at": null,
                    "confirmed": true,
                    "contact_email": "jeanbon@gorgias.io",
                    "created_at": "2017-07-12T16:14:09-04:00",
                    "currency": "EUR",
                    "customer": {
                      "created_at": "2017-03-17T21:26:16-04:00",
                      "default_address": {
                        "address1": "12 rue du poisson cru",
                        "address2": "unit 3",
                        "city": "Paris",
                        "company": "Fleury Michon",
                        "country": "France",
                        "country_code": "FR",
                        "country_name": "France",
                        "customer_id": 4279837195,
                        "default": true,
                        "first_name": "Jean",
                        "id": 4797217995,
                        "last_name": "Bon",
                        "name": "Jean Bon",
                        "phone": null,
                        "province": "Ile de France",
                        "province_code": null,
                        "zip": "75012",
                      },
                      "email": "jeanbon@gorgias.io",
                      "email_marketing_consent": {
                        "consent_updated_at": null,
                        "opt_in_level": "single_opt_in",
                        "state": "not_subscribed",
                      },
                      "first_name": "Jean",
                      "id": 4279837195,
                      "last_name": "Bon",
                      "last_order_id": 4236385803,
                      "last_order_name": "#1202",
                      "multipass_identifier": null,
                      "note": "Un grand jambon",
                      "orders_count": 80,
                      "phone": "+14155489999",
                      "sms_marketing_consent": null,
                      "state": "disabled",
                      "tags": "Active Subscriber",
                      "tax_exempt": false,
                      "total_spent": "131.50",
                      "updated_at": "2017-07-12T20:44:14-04:00",
                      "verified_email": true,
                    },
                    "customer_locale": null,
                    "device_id": null,
                    "discount_codes": [],
                    "email": "jeanbon@gorgias.io",
                    "financial_status": "paid",
                    "fulfillment_status": null,
                    "fulfillments": [],
                    "id": 4236385803,
                    "landing_site": null,
                    "landing_site_ref": null,
                    "line_items": [
                      {
                        "fulfillable_quantity": 1,
                        "fulfillment_service": "manual",
                        "gift_card": false,
                        "grams": 200,
                        "id": 8276448779,
                        "name": "Baskets peu cheres  10.00% Off Auto renew",
                        "price": "9.00",
                        "product_exists": true,
                        "product_id": 9211387275,
                        "properties": [],
                        "quantity": 1,
                        "requires_shipping": true,
                        "sku": "1234567890",
                        "tax_lines": [
                          {
                            "price": "1.50",
                            "rate": 0.2,
                            "title": "TVA",
                          },
                        ],
                        "taxable": true,
                        "title": "Baskets peu cheres  10.00% Off Auto renew",
                        "total_discount": "0.00",
                        "variant_id": 32994232907,
                        "variant_title": null,
                        "vendor": "storegorgias3",
                      },
                    ],
                    "location_id": null,
                    "name": "#1202",
                    "note": "",
                    "note_attributes": [],
                    "number": 202,
                    "order_number": 1202,
                    "order_status_url": null,
                    "payment_gateway_names": [
                      "manual",
                    ],
                    "phone": null,
                    "processed_at": "2017-07-12T16:14:09-04:00",
                    "reference": null,
                    "referring_site": null,
                    "refunds": [],
                    "shipping_address": {
                      "address1": "12 rue du poisson cru",
                      "address2": "unit 3",
                      "city": "Paris",
                      "company": "Fleury Michon",
                      "country": "France",
                      "country_code": "FR",
                      "first_name": "Jean",
                      "last_name": "Bon",
                      "latitude": 48.8293647,
                      "longitude": 2.4265406,
                      "name": "Jean Bon",
                      "phone": null,
                      "province": "Ile de France",
                      "province_code": null,
                      "zip": "75012",
                    },
                    "shipping_lines": [],
                    "source_identifier": null,
                    "source_name": "shopify_draft_order",
                    "source_url": null,
                    "subtotal_price": "9.00",
                    "tags": "",
                    "tax_lines": [
                      {
                        "price": "1.50",
                        "rate": 0.2,
                        "title": "TVA",
                      },
                    ],
                    "taxes_included": true,
                    "test": false,
                    "token": "c4e9a492adf51bed245af52b4dd1789a",
                    "total_discounts": "0.00",
                    "total_line_items_price": "9.00",
                    "total_price": "9.00",
                    "total_price_usd": "10.33",
                    "total_tax": "1.50",
                    "total_weight": 200,
                    "updated_at": "2017-07-12T16:14:10-04:00",
                    "user_id": 95205899,
                  },
                  {
                    "browser_ip": null,
                    "buyer_accepts_marketing": false,
                    "cancel_reason": null,
                    "cancelled_at": null,
                    "cart_token": null,
                    "checkout_id": null,
                    "checkout_token": null,
                    "closed_at": null,
                    "confirmed": true,
                    "contact_email": "jean@gorgias.io",
                    "created_at": "2017-06-16T20:06:10-04:00",
                    "currency": "EUR",
                    "customer": {
                      "created_at": "2017-03-17T21:26:16-04:00",
                      "default_address": {
                        "address1": "12 rue du poisson cru",
                        "address2": "unit 3",
                        "city": "Paris",
                        "company": "Fleury Michon",
                        "country": "France",
                        "country_code": "FR",
                        "country_name": "France",
                        "customer_id": 4279837195,
                        "default": true,
                        "first_name": "Jean",
                        "id": 4797217995,
                        "last_name": "Bon",
                        "name": "Jean Bon",
                        "phone": null,
                        "province": "Ile de France",
                        "province_code": null,
                        "zip": "75012",
                      },
                      "email": "jeanbon@gorgias.io",
                      "email_marketing_consent": {
                        "consent_updated_at": null,
                        "opt_in_level": "single_opt_in",
                        "state": "not_subscribed",
                      },
                      "first_name": "Jean",
                      "id": 4279837195,
                      "last_name": "Bon",
                      "last_order_id": 4236385803,
                      "last_order_name": "#1202",
                      "multipass_identifier": null,
                      "note": "Un grand jambon",
                      "orders_count": 80,
                      "phone": "+14155489999",
                      "sms_marketing_consent": null,
                      "state": "disabled",
                      "tags": "Active Subscriber",
                      "tax_exempt": false,
                      "total_spent": "131.50",
                      "updated_at": "2017-07-12T20:44:14-04:00",
                      "verified_email": true,
                    },
                    "customer_locale": null,
                    "device_id": null,
                    "discount_codes": [],
                    "email": "jean@gorgias.io",
                    "financial_status": "paid",
                    "fulfillment_status": null,
                    "fulfillments": [],
                    "id": 4194477515,
                    "landing_site": null,
                    "landing_site_ref": null,
                    "line_items": [
                      {
                        "fulfillable_quantity": 1,
                        "fulfillment_service": "manual",
                        "gift_card": false,
                        "grams": 10,
                        "id": 8184387659,
                        "name": "Bonbon acidulé",
                        "price": "0.10",
                        "product_exists": true,
                        "product_id": 8345093387,
                        "properties": [],
                        "quantity": 1,
                        "requires_shipping": true,
                        "sku": "0987654321",
                        "tax_lines": [],
                        "taxable": true,
                        "title": "Bonbon acidulé",
                        "total_discount": "0.00",
                        "variant_id": 28442938955,
                        "variant_title": null,
                        "vendor": "storegorgias3",
                      },
                    ],
                    "location_id": null,
                    "name": "#1199",
                    "note": "",
                    "note_attributes": [],
                    "number": 199,
                    "order_number": 1199,
                    "order_status_url": null,
                    "payment_gateway_names": [],
                    "phone": null,
                    "processed_at": "2017-06-16T20:06:10-04:00",
                    "reference": null,
                    "referring_site": null,
                    "refunds": [],
                    "shipping_address": {
                      "address1": "12 rue du poisson cru",
                      "address2": "unit 3",
                      "city": "Paris",
                      "company": "Fleury Michon",
                      "country": "France",
                      "country_code": "FR",
                      "first_name": "Jean",
                      "last_name": "Bon",
                      "latitude": 48.8293647,
                      "longitude": 2.4265406,
                      "name": "Jean Bon",
                      "phone": null,
                      "province": "Ile de France",
                      "province_code": null,
                      "zip": "75012",
                    },
                    "shipping_lines": [],
                    "source_identifier": null,
                    "source_name": "1424624",
                    "source_url": null,
                    "subtotal_price": "0.10",
                    "tags": "",
                    "tax_lines": [],
                    "taxes_included": false,
                    "test": false,
                    "token": "0fbe98fcc45da2abe985cc7eea5a5cf4",
                    "total_discounts": "0.00",
                    "total_line_items_price": "0.10",
                    "total_price": "0.10",
                    "total_price_usd": "0.11",
                    "total_tax": "0.00",
                    "total_weight": null,
                    "updated_at": "2017-06-16T20:06:10-04:00",
                    "user_id": null,
                  },
                ],
              },
            },
            "lastname": "Bon",
            "name": "Jean Bon",
          },
          "events": [],
          "external_id": null,
          "from_agent": true,
          "id": 152,
          "is_unread": true,
          "language": "en",
          "last_message_datetime": "2017-07-31T23:07:35.150000+00:00",
          "last_received_message_datetime": null,
          "messages": [
            {
              "actions": null,
              "attachments": [],
              "body_html": "<div>Hi! How are <strong>you</strong>?</div>",
              "body_text": "Hi! How are you?",
              "channel": "email",
              "created_datetime": "2017-07-31T23:07:35.150000+00:00",
              "external_id": null,
              "failed_datetime": null,
              "from_agent": true,
              "id": 182,
              "integration_id": 1,
              "isMessage": true,
              "is_retriable": false,
              "message_id": "<150154245609.11.10386011626513378232.152-182@worker>",
              "meta": null,
              "opened_datetime": null,
              "public": true,
              "receiver": {
                "email": "jeanbon@gorgias.io",
                "firstname": "Jean",
                "id": 34,
                "lastname": "Bon",
                "name": "Jean Bon",
              },
              "rule_id": null,
              "sender": {
                "email": "alex@gorgias.io",
                "firstname": "Alex",
                "id": 2,
                "lastname": "Plugaru",
                "name": "Alex Plugaru",
              },
              "sent_datetime": "2017-07-31T23:07:36.946068+00:00",
              "source": {
                "from": {
                  "address": "support@acme.gorgias.io",
                  "name": "Acme Support",
                },
                "to": [
                  {
                    "address": "jeanbon@gorgias.io",
                    "name": "Jean Bon",
                  },
                ],
                "type": "email",
              },
              "stripped_html": "<div>Hi! How are <strong>you</strong>?</div>",
              "stripped_signature": null,
              "stripped_text": "Hi! How are you?",
              "subject": "",
              "ticket_id": 152,
              "uri": "/api/tickets/1/messages/0/",
              "via": "helpdesk",
            },
          ],
          "messages_count": 1,
          "meta": null,
          "opened_datetime": null,
          "receiver": {
            "email": "jeanbon@gorgias.io",
            "firstname": "Jean",
            "id": 34,
            "lastname": "Bon",
            "name": "Jean Bon",
          },
          "sender": {
            "email": "alex@gorgias.io",
            "firstname": "Alex",
            "id": 2,
            "lastname": "Plugaru",
            "name": "Alex Plugaru",
          },
          "snooze_datetime": null,
          "status": "open",
          "subject": "Great ticket",
          "tags": [
            {
              "decoration": {},
              "id": 1,
              "name": "refund",
            },
          ],
          "trashed_datetime": null,
          "updated_datetime": "2017-07-31T23:07:37.253131+00:00",
          "uri": "/api/tickets/0/",
          "via": "helpdesk",
        },
      ],
      "meta": {
        "next_cursor": null,
        "prev_cursor": null,
      },
    },
    "type": "FETCH_LIST_VIEW_SUCCESS",
    "viewType": "ticket-list",
    "withHighlight": false,
  },
]
`;

exports[`actions fetchViewItems should pass the view because it is dirty 1`] = `
[
  {
    "discreet": false,
    "type": "FETCH_LIST_VIEW_START",
    "viewId": 1,
  },
  {
    "data": {
      "data": [
        {
          "assignee_team": null,
          "assignee_user": {
            "email": "alex@gorgias.io",
            "firstname": "Alex",
            "id": 2,
            "lastname": "Plugaru",
            "name": "Alex Plugaru",
          },
          "channel": "email",
          "closed_datetime": null,
          "created_datetime": "2017-07-31T23:07:35.150000+00:00",
          "custom_fields": {},
          "customer": {
            "channels": [
              {
                "address": "jeanbon@gorgias.io",
                "created_datetime": "2017-07-31T21:45:03.399819+00:00",
                "deleted_datetime": null,
                "id": 55,
                "preferred": true,
                "type": "email",
                "updated_datetime": "2017-07-31T21:45:03.399828+00:00",
              },
              {
                "address": "+1 415-548-9999",
                "created_datetime": "2017-07-31T21:45:03.416965+00:00",
                "deleted_datetime": null,
                "id": 56,
                "preferred": true,
                "type": "phone",
                "updated_datetime": "2017-07-31T21:45:03.416976+00:00",
              },
            ],
            "data": null,
            "email": "jeanbon@gorgias.io",
            "firstname": "Jean",
            "id": 34,
            "integrations": {
              "2": {
                "__integration_type__": "http",
                "args": {
                  "name": "Jean Bon",
                },
                "headers": {
                  "Accept": "*/*",
                  "Accept-Encoding": "gzip, deflate",
                  "Connection": "close",
                  "Content-Type": "application/json",
                  "Host": "httpbin.org",
                  "User-Agent": "python-requests/2.14.2",
                },
                "origin": "199.188.194.25",
                "url": "https://httpbin.org/get?name=Jean Bon",
              },
              "5": {
                "__integration_type__": "shopify",
                "customer": {
                  "addresses": [
                    {
                      "address1": "3 rue des volailles",
                      "address2": "",
                      "city": "Paris",
                      "company": "Fleury Michon",
                      "country": "France",
                      "country_code": "FR",
                      "country_name": "France",
                      "customer_id": 4279837195,
                      "default": false,
                      "first_name": "Jean",
                      "id": 4665556619,
                      "last_name": "Bon",
                      "name": "Jean Bon",
                      "phone": "",
                      "province": "Ile de France",
                      "province_code": null,
                      "zip": "75012",
                    },
                  ],
                  "created_at": "2017-03-17T21:26:16-04:00",
                  "default_address": {
                    "address1": "12 rue du poisson cru",
                    "address2": "unit 3",
                    "city": "Paris",
                    "company": "Fleury Michon",
                    "country": "France",
                    "country_code": "FR",
                    "country_name": "France",
                    "customer_id": 4279837195,
                    "default": true,
                    "first_name": "Jean",
                    "id": 4797217995,
                    "last_name": "Bon",
                    "name": "Jean Bon",
                    "phone": null,
                    "province": "Ile de France",
                    "province_code": null,
                    "zip": "75012",
                  },
                  "email": "jeanbon@gorgias.io",
                  "email_marketing_consent": {
                    "consent_updated_at": null,
                    "opt_in_level": "single_opt_in",
                    "state": "not_subscribed",
                  },
                  "first_name": "Jean",
                  "id": 4279837195,
                  "last_name": "Bon",
                  "last_order_id": 4236385803,
                  "last_order_name": "#1202",
                  "multipass_identifier": null,
                  "note": "Un grand jambon",
                  "orders_count": 80,
                  "phone": "+14155489999",
                  "sms_marketing_consent": null,
                  "state": "disabled",
                  "tags": "Active Subscriber",
                  "tax_exempt": false,
                  "total_spent": "131.50",
                  "updated_at": "2017-07-12T20:44:14-04:00",
                  "verified_email": true,
                },
                "orders": [
                  {
                    "billing_address": {
                      "address1": "12 rue du poisson cru",
                      "address2": "unit 3",
                      "city": "Paris",
                      "company": "Fleury Michon",
                      "country": "France",
                      "country_code": "FR",
                      "first_name": "Jean",
                      "last_name": "Bon",
                      "latitude": 48.8293647,
                      "longitude": 2.4265406,
                      "name": "Jean Bon",
                      "phone": null,
                      "province": "Ile de France",
                      "province_code": null,
                      "zip": "75012",
                    },
                    "browser_ip": null,
                    "buyer_accepts_marketing": false,
                    "cancel_reason": null,
                    "cancelled_at": null,
                    "cart_token": null,
                    "checkout_id": null,
                    "checkout_token": null,
                    "closed_at": null,
                    "confirmed": true,
                    "contact_email": "jeanbon@gorgias.io",
                    "created_at": "2017-07-12T16:14:09-04:00",
                    "currency": "EUR",
                    "customer": {
                      "created_at": "2017-03-17T21:26:16-04:00",
                      "default_address": {
                        "address1": "12 rue du poisson cru",
                        "address2": "unit 3",
                        "city": "Paris",
                        "company": "Fleury Michon",
                        "country": "France",
                        "country_code": "FR",
                        "country_name": "France",
                        "customer_id": 4279837195,
                        "default": true,
                        "first_name": "Jean",
                        "id": 4797217995,
                        "last_name": "Bon",
                        "name": "Jean Bon",
                        "phone": null,
                        "province": "Ile de France",
                        "province_code": null,
                        "zip": "75012",
                      },
                      "email": "jeanbon@gorgias.io",
                      "email_marketing_consent": {
                        "consent_updated_at": null,
                        "opt_in_level": "single_opt_in",
                        "state": "not_subscribed",
                      },
                      "first_name": "Jean",
                      "id": 4279837195,
                      "last_name": "Bon",
                      "last_order_id": 4236385803,
                      "last_order_name": "#1202",
                      "multipass_identifier": null,
                      "note": "Un grand jambon",
                      "orders_count": 80,
                      "phone": "+14155489999",
                      "sms_marketing_consent": null,
                      "state": "disabled",
                      "tags": "Active Subscriber",
                      "tax_exempt": false,
                      "total_spent": "131.50",
                      "updated_at": "2017-07-12T20:44:14-04:00",
                      "verified_email": true,
                    },
                    "customer_locale": null,
                    "device_id": null,
                    "discount_codes": [],
                    "email": "jeanbon@gorgias.io",
                    "financial_status": "paid",
                    "fulfillment_status": null,
                    "fulfillments": [],
                    "id": 4236385803,
                    "landing_site": null,
                    "landing_site_ref": null,
                    "line_items": [
                      {
                        "fulfillable_quantity": 1,
                        "fulfillment_service": "manual",
                        "gift_card": false,
                        "grams": 200,
                        "id": 8276448779,
                        "name": "Baskets peu cheres  10.00% Off Auto renew",
                        "price": "9.00",
                        "product_exists": true,
                        "product_id": 9211387275,
                        "properties": [],
                        "quantity": 1,
                        "requires_shipping": true,
                        "sku": "1234567890",
                        "tax_lines": [
                          {
                            "price": "1.50",
                            "rate": 0.2,
                            "title": "TVA",
                          },
                        ],
                        "taxable": true,
                        "title": "Baskets peu cheres  10.00% Off Auto renew",
                        "total_discount": "0.00",
                        "variant_id": 32994232907,
                        "variant_title": null,
                        "vendor": "storegorgias3",
                      },
                    ],
                    "location_id": null,
                    "name": "#1202",
                    "note": "",
                    "note_attributes": [],
                    "number": 202,
                    "order_number": 1202,
                    "order_status_url": null,
                    "payment_gateway_names": [
                      "manual",
                    ],
                    "phone": null,
                    "processed_at": "2017-07-12T16:14:09-04:00",
                    "reference": null,
                    "referring_site": null,
                    "refunds": [],
                    "shipping_address": {
                      "address1": "12 rue du poisson cru",
                      "address2": "unit 3",
                      "city": "Paris",
                      "company": "Fleury Michon",
                      "country": "France",
                      "country_code": "FR",
                      "first_name": "Jean",
                      "last_name": "Bon",
                      "latitude": 48.8293647,
                      "longitude": 2.4265406,
                      "name": "Jean Bon",
                      "phone": null,
                      "province": "Ile de France",
                      "province_code": null,
                      "zip": "75012",
                    },
                    "shipping_lines": [],
                    "source_identifier": null,
                    "source_name": "shopify_draft_order",
                    "source_url": null,
                    "subtotal_price": "9.00",
                    "tags": "",
                    "tax_lines": [
                      {
                        "price": "1.50",
                        "rate": 0.2,
                        "title": "TVA",
                      },
                    ],
                    "taxes_included": true,
                    "test": false,
                    "token": "c4e9a492adf51bed245af52b4dd1789a",
                    "total_discounts": "0.00",
                    "total_line_items_price": "9.00",
                    "total_price": "9.00",
                    "total_price_usd": "10.33",
                    "total_tax": "1.50",
                    "total_weight": 200,
                    "updated_at": "2017-07-12T16:14:10-04:00",
                    "user_id": 95205899,
                  },
                  {
                    "browser_ip": null,
                    "buyer_accepts_marketing": false,
                    "cancel_reason": null,
                    "cancelled_at": null,
                    "cart_token": null,
                    "checkout_id": null,
                    "checkout_token": null,
                    "closed_at": null,
                    "confirmed": true,
                    "contact_email": "jean@gorgias.io",
                    "created_at": "2017-06-16T20:06:10-04:00",
                    "currency": "EUR",
                    "customer": {
                      "created_at": "2017-03-17T21:26:16-04:00",
                      "default_address": {
                        "address1": "12 rue du poisson cru",
                        "address2": "unit 3",
                        "city": "Paris",
                        "company": "Fleury Michon",
                        "country": "France",
                        "country_code": "FR",
                        "country_name": "France",
                        "customer_id": 4279837195,
                        "default": true,
                        "first_name": "Jean",
                        "id": 4797217995,
                        "last_name": "Bon",
                        "name": "Jean Bon",
                        "phone": null,
                        "province": "Ile de France",
                        "province_code": null,
                        "zip": "75012",
                      },
                      "email": "jeanbon@gorgias.io",
                      "email_marketing_consent": {
                        "consent_updated_at": null,
                        "opt_in_level": "single_opt_in",
                        "state": "not_subscribed",
                      },
                      "first_name": "Jean",
                      "id": 4279837195,
                      "last_name": "Bon",
                      "last_order_id": 4236385803,
                      "last_order_name": "#1202",
                      "multipass_identifier": null,
                      "note": "Un grand jambon",
                      "orders_count": 80,
                      "phone": "+14155489999",
                      "sms_marketing_consent": null,
                      "state": "disabled",
                      "tags": "Active Subscriber",
                      "tax_exempt": false,
                      "total_spent": "131.50",
                      "updated_at": "2017-07-12T20:44:14-04:00",
                      "verified_email": true,
                    },
                    "customer_locale": null,
                    "device_id": null,
                    "discount_codes": [],
                    "email": "jean@gorgias.io",
                    "financial_status": "paid",
                    "fulfillment_status": null,
                    "fulfillments": [],
                    "id": 4194477515,
                    "landing_site": null,
                    "landing_site_ref": null,
                    "line_items": [
                      {
                        "fulfillable_quantity": 1,
                        "fulfillment_service": "manual",
                        "gift_card": false,
                        "grams": 10,
                        "id": 8184387659,
                        "name": "Bonbon acidulé",
                        "price": "0.10",
                        "product_exists": true,
                        "product_id": 8345093387,
                        "properties": [],
                        "quantity": 1,
                        "requires_shipping": true,
                        "sku": "0987654321",
                        "tax_lines": [],
                        "taxable": true,
                        "title": "Bonbon acidulé",
                        "total_discount": "0.00",
                        "variant_id": 28442938955,
                        "variant_title": null,
                        "vendor": "storegorgias3",
                      },
                    ],
                    "location_id": null,
                    "name": "#1199",
                    "note": "",
                    "note_attributes": [],
                    "number": 199,
                    "order_number": 1199,
                    "order_status_url": null,
                    "payment_gateway_names": [],
                    "phone": null,
                    "processed_at": "2017-06-16T20:06:10-04:00",
                    "reference": null,
                    "referring_site": null,
                    "refunds": [],
                    "shipping_address": {
                      "address1": "12 rue du poisson cru",
                      "address2": "unit 3",
                      "city": "Paris",
                      "company": "Fleury Michon",
                      "country": "France",
                      "country_code": "FR",
                      "first_name": "Jean",
                      "last_name": "Bon",
                      "latitude": 48.8293647,
                      "longitude": 2.4265406,
                      "name": "Jean Bon",
                      "phone": null,
                      "province": "Ile de France",
                      "province_code": null,
                      "zip": "75012",
                    },
                    "shipping_lines": [],
                    "source_identifier": null,
                    "source_name": "1424624",
                    "source_url": null,
                    "subtotal_price": "0.10",
                    "tags": "",
                    "tax_lines": [],
                    "taxes_included": false,
                    "test": false,
                    "token": "0fbe98fcc45da2abe985cc7eea5a5cf4",
                    "total_discounts": "0.00",
                    "total_line_items_price": "0.10",
                    "total_price": "0.10",
                    "total_price_usd": "0.11",
                    "total_tax": "0.00",
                    "total_weight": null,
                    "updated_at": "2017-06-16T20:06:10-04:00",
                    "user_id": null,
                  },
                ],
              },
            },
            "lastname": "Bon",
            "name": "Jean Bon",
          },
          "events": [],
          "external_id": null,
          "from_agent": true,
          "id": 152,
          "is_unread": true,
          "language": "en",
          "last_message_datetime": "2017-07-31T23:07:35.150000+00:00",
          "last_received_message_datetime": null,
          "messages": [
            {
              "actions": null,
              "attachments": [],
              "body_html": "<div>Hi! How are <strong>you</strong>?</div>",
              "body_text": "Hi! How are you?",
              "channel": "email",
              "created_datetime": "2017-07-31T23:07:35.150000+00:00",
              "external_id": null,
              "failed_datetime": null,
              "from_agent": true,
              "id": 182,
              "integration_id": 1,
              "isMessage": true,
              "is_retriable": false,
              "message_id": "<150154245609.11.10386011626513378232.152-182@worker>",
              "meta": null,
              "opened_datetime": null,
              "public": true,
              "receiver": {
                "email": "jeanbon@gorgias.io",
                "firstname": "Jean",
                "id": 34,
                "lastname": "Bon",
                "name": "Jean Bon",
              },
              "rule_id": null,
              "sender": {
                "email": "alex@gorgias.io",
                "firstname": "Alex",
                "id": 2,
                "lastname": "Plugaru",
                "name": "Alex Plugaru",
              },
              "sent_datetime": "2017-07-31T23:07:36.946068+00:00",
              "source": {
                "from": {
                  "address": "support@acme.gorgias.io",
                  "name": "Acme Support",
                },
                "to": [
                  {
                    "address": "jeanbon@gorgias.io",
                    "name": "Jean Bon",
                  },
                ],
                "type": "email",
              },
              "stripped_html": "<div>Hi! How are <strong>you</strong>?</div>",
              "stripped_signature": null,
              "stripped_text": "Hi! How are you?",
              "subject": "",
              "ticket_id": 152,
              "uri": "/api/tickets/1/messages/0/",
              "via": "helpdesk",
            },
          ],
          "messages_count": 1,
          "meta": null,
          "opened_datetime": null,
          "receiver": {
            "email": "jeanbon@gorgias.io",
            "firstname": "Jean",
            "id": 34,
            "lastname": "Bon",
            "name": "Jean Bon",
          },
          "sender": {
            "email": "alex@gorgias.io",
            "firstname": "Alex",
            "id": 2,
            "lastname": "Plugaru",
            "name": "Alex Plugaru",
          },
          "snooze_datetime": null,
          "status": "open",
          "subject": "Great ticket",
          "tags": [
            {
              "decoration": {},
              "id": 1,
              "name": "refund",
            },
          ],
          "trashed_datetime": null,
          "updated_datetime": "2017-07-31T23:07:37.253131+00:00",
          "uri": "/api/tickets/0/",
          "via": "helpdesk",
        },
      ],
      "meta": {
        "next_cursor": null,
        "prev_cursor": null,
      },
    },
    "type": "FETCH_LIST_VIEW_SUCCESS",
    "viewType": "ticket-list",
    "withHighlight": false,
  },
]
`;

exports[`actions fetchViewItems should pass the view because it is dirty 2`] = `
{
  "delete": [],
  "get": [],
  "head": [],
  "link": [],
  "list": [],
  "options": [],
  "patch": [],
  "post": [],
  "put": [],
  "unlink": [],
}
`;

exports[`actions fetchViewItems should register the rank scenario request and response 1`] = `
[MockFunction] {
  "calls": [
    [
      {
        "query": undefined,
        "requestTime": 1487076708000,
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`actions fetchViewItems should register the rank scenario request and response 2`] = `
[MockFunction] {
  "calls": [
    [
      {
        "numberOfResults": 2,
        "responseTime": 1487076708000,
        "searchEngine": undefined,
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`actions fieldEnumSearch() should dispatch results 1`] = `
Immutable.List [
  Immutable.Map {
    "id": 1,
    "name": "Name 1",
    "email": "name1@foo.bar",
  },
  Immutable.Map {
    "id": 2,
    "name": "Name 2",
    "email": "name2@foo.bar",
  },
  Immutable.Map {
    "id": 3,
    "name": "Name 3",
    "email": "name3@foo.bar",
  },
]
`;

exports[`actions submitView() should create view when id is 0 1`] = `
{
  "delete": [],
  "get": [],
  "head": [],
  "link": [],
  "list": [],
  "options": [],
  "patch": [],
  "post": [
    {
      "data": "{"filters":"eq(ticket.channel, \\"chat\\")","type":"ticket-list","name":"My Tickets","shared_with_users":[1],"visibility":"private"}",
      "env": {
        "Blob": [Function],
        "FormData": [Function],
      },
      "headers": {
        "Accept": "application/json, text/plain, */*",
        "Content-Type": "application/json",
        "X-CSRF-Token": "abcd",
        "X-Gorgias-User-Client": "web",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "post",
      "timeout": 0,
      "transformRequest": [
        [Function],
      ],
      "transformResponse": [
        [Function],
      ],
      "transitional": {
        "clarifyTimeoutError": false,
        "forcedJSONParsing": true,
        "silentJSONParsing": true,
      },
      "url": "/api/views/",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "put": [],
  "unlink": [],
}
`;

exports[`actions submitView() should create view when id is 0 2`] = `
[
  {
    "type": "SUBMIT_VIEW_START",
  },
  {
    "resp": {
      "id": 1,
      "slug": "my-tickets",
    },
    "type": "SUBMIT_NEW_VIEW_SUCCESS",
  },
]
`;

exports[`actions submitView() should update view 1`] = `
{
  "delete": [],
  "get": [],
  "head": [],
  "link": [],
  "list": [],
  "options": [],
  "patch": [],
  "post": [],
  "put": [
    {
      "data": "{"id":99,"type":"ticket-list","name":"My Tickets","filters":"eq(ticket.channel, \\"chat\\")"}",
      "env": {
        "Blob": [Function],
        "FormData": [Function],
      },
      "headers": {
        "Accept": "application/json, text/plain, */*",
        "Content-Type": "application/json",
        "X-CSRF-Token": "abcd",
        "X-Gorgias-User-Client": "web",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "put",
      "timeout": 0,
      "transformRequest": [
        [Function],
      ],
      "transformResponse": [
        [Function],
      ],
      "transitional": {
        "clarifyTimeoutError": false,
        "forcedJSONParsing": true,
        "silentJSONParsing": true,
      },
      "url": "/api/views/99/",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "unlink": [],
}
`;

exports[`actions submitView() should update view 2`] = `
[
  {
    "type": "SUBMIT_VIEW_START",
  },
]
`;

exports[`actions updateRecentViews should update updated datetime of recent views 1`] = `
{
  "type": "UPDATE_RECENT_VIEWS",
  "viewIds": [
    1,
  ],
}
`;

exports[`actions updateRecentViews should update updated datetime of recent views 2`] = `
[
  {
    "type": "UPDATE_RECENT_VIEWS",
    "viewIds": [
      1,
    ],
  },
]
`;
